--- a/views/partials/main_nav.ejs
+++ b/views/partials/main_nav.ejs
@@ -1,6 +1,6 @@
 <!-- Main Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="/">MONIKA</a>
+    <a class="navbar-brand" href="/"style="font-family:cursive; font: size 80px;">MK</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -14,7 +14,8 @@
         <li class="nav-item">
         <% } %>
           <a class="nav-link" href="/home"><i class="fas fa-lg fa-laptop-house"></i> Home </a>
-        </li>
+          
+       </li>
 
         <% if (title == "About") { %>
         <li class="nav-item active">
@@ -29,11 +30,11 @@
         <% } else  { %>
         <li class="nav-item">
         <% } %>
-          <a class="nav-link" href="/products"><i class="fab fa-elementor"></i> Products </a>
+          <a class="nav-link" href="/products"><i class="fab fa-elementor"></i> Projects </a>
         </li>
 
         <% if (title == "Services") { %>
-        <li class="nav-item active">
+        <li class="nav-item active"> 
         <% } else  { %>
         <li class="nav-item">
         <% } %>
@@ -49,3 +50,4 @@
         </li>
     </div>
   </nav>
+
