--- a/views/services.ejs
+++ b/views/services.ejs
@@ -12,12 +12,12 @@
     <div class="card" style="background-color:grey; border-color:white;">
   <img class="card-img-top" src="holder.js/100x180/" alt="">
   <div class="card-body">
-    <h4 class="card-title">Monika Kumari</h4>
-    <p class="card-text">Let's build something amazing together</p>
-  </div>
-  <div class="alert alert-success" role="alert">
-    <h4 class="alert-heading">Chase Dreams Not People</h4>
+    <h4 class="card-title">General Programming</h4>
+    <h4 class="card-title">Digital Designing</h4>
+    <h4 class="card-title">Web Development</h4>
     
+  </div>
+  
     
 </div>
   </main>
@@ -25,9 +25,3 @@
 <%- include partials/bottom_nav.ejs %>  
 
 <%- include partials/footer.ejs %>
-
-  
-
-
-
-
