--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -9,14 +9,14 @@
       <h1 class="display-4">Welcome to the <%= title %> page</h1>
       
     </div>
-    <div class="card" style="background-color:grey; border-color:white;">
-  <img class="card-img-top" src="holder.js/100x180/" alt="">
+    <div class="card" style="background-color:white; border-color:black;">
+  <img class="card-img-top" src="holder.js/90x90/" alt="">
   <div class="card-body">
     <h4 class="card-title">Monika Kumari (301225003)</h4> <!--Student id -->
-    <p class="card-title">Mobile no- +91 7988365476</p>
+    <p class="card-title">Use this to mail me: ms9068680687@gmail.com</p>
   </div>
   <div class="alert alert-success" role="alert">
-    <h4 class="alert-heading">Mail id- ms9068680687@gmail.com</h4>
+    <h4 class="alert-heading">Feel free to connect</h4>
     <form class="row g-3 needs-validation" novalidate>
       <div class="col-md-4">
         <label for="validationCustom01" class="form-label">First name</label>
@@ -59,7 +59,7 @@
       </div>
       
       <div class="col-12">
-        <button  href="D:\asmnt1\views\index.ejs" class="btn btn-primary" type="submit">Submit</button>
+        <button  href="views\index.ejs" class="btn btn-primary" type="submit">Submit</button>
       </div>
     </form>
     
