--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,26 +1,30 @@
 <%- include partials/header.ejs %>
 
 <%- include partials/main_nav.ejs %>
+ <body>
+    <img src="\Assets\images\Screenshot (24).png" style=" float:left; min-width: 1000px; max-width: 1000px; padding-left: 10%; margin-left: 2%; padding-right: 3%">
+  </body>
   
 
   <!-- Main Content -->
   <main class="container">
     <div class="jumbotron">
-      <h1 class="display-4">Welcome to the <%= title %> page</h1>
+      <h1 class="display-4">Welcome to Home page</h1>
       
     </div>
-    <div class="card" style="background-color:grey; border-color:white;">
+    <div class="card" style="background-color:white; border-color:black;">
   <img class="card-img-top" src="holder.js/100x180/" alt="">
   <div class="card-body">
     <h4 class="card-title">Monika Kumari</h4>
     <p class="card-text">Let's build something amazing together</p>
+   
   </div>
-  <div class="alert alert-success" role="alert">
-    <h4 class="alert-heading">Chase Dreams Not People</h4>
+  
     
     
 </div>
   </main>
+ 
   
 <%- include partials/bottom_nav.ejs %>  
 
