--- a/views/partials/main_nav.ejs
+++ b/views/partials/main_nav.ejs
@@ -4,6 +4,8 @@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
+    <a class="nav-link"  aria-disabled="false" href="https://github.com/singhmoni">Github</a>
+    
   
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
@@ -25,7 +27,7 @@
           <a class="nav-link" href="/about"><i class="fas fa-info-circle"></i> About </a>
         </li>
 
-        <% if (title == "Products") { %>
+        <% if (title == "products") { %>
         <li class="nav-item active">
         <% } else  { %>
         <li class="nav-item">
