--- a/views/services.ejs
+++ b/views/services.ejs
@@ -1,27 +1,29 @@
 <%- include partials/header.ejs %>
 
 <%- include partials/main_nav.ejs %>
+ <body>
+<img src="\Assets\images\download (1).jpg" style=" float:left; min-width: 700px; max-width: 700px; padding-left: 10%; margin-left: 2%; padding-right: 3%">
+</body
   
 
   <!-- Main Content -->
   <main class="container">
     <div class="jumbotron">
       <h1 class="display-4">Welcome to the <%= title %> page</h1>
+      <p style="color:firebrick; font-size: 20px;">
+        <p >What I Have To Offer<br>
       
     </div>
-    <div class="card" style="background-color:grey; border-color:white;">
+    <div class="card" style="background-color:white; border-color:black;">
   <img class="card-img-top" src="holder.js/100x180/" alt="">
   <div class="card-body">
     <h4 class="card-title">General Programming</h4>
     <h4 class="card-title">Digital Designing</h4>
     <h4 class="card-title">Web Development</h4>
-    
+    </div>
   </div>
-  
-    
-</div>
   </main>
-  
+ 
 <%- include partials/bottom_nav.ejs %>  
 
 <%- include partials/footer.ejs %>
