--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,6 +1,9 @@
 <%- include partials/header.ejs %>
 
 <%- include partials/main_nav.ejs %>
+<body>
+<img src="\Assets\images\WhatsApp Image 2022-02-08 at 12.36.22 AM.jpeg" style=" float:left; min-width: 400px; max-width: 400px; padding-left: 10%; margin-left: 2%; padding-right: 3%">
+</body>
 <!-- Main Content -->
   <main class="container">
     <div class="jumbotron">
@@ -18,17 +21,18 @@
     
 </div>-->
 
-  <img src="views\WhatsApp Image 2022-02-08 at 12.36.22 AM.jpeg" style=" float:left; min-width: 500px; max-width: 500px; padding-left: 10%; margin-left: 2%; padding-right: 3%">
+  
         <p style="color:firebrick; font-size: 20px;">
-        <p >Myself Monika Kumari, basically from Haryana<br>
-         state in India which is a diversed nation,<br> Currently, I am pursuing Post Graduation Diploma in AI <br>from "Centennial College"<br> located in Scarborough,Toronto<br>
+        <p >Myself Monika Kumari, basically from Haryana<br>  <!-- Student name-->
+         state in India which is a diversed nation,<br> Currently, I am pursuing Post Graduation Diploma in AI <br>from "Centennial College" located in Scarborough,Toronto<br>
           I love to travel and read sci-fi novels.<br> Right now I am exploring new programming languages and fields <br> of Artificial Intelligence.<br><a href="https://drive.google.com/file/d/1UQ7zPpGwcE-24TqEk-pdv_iHBNCyTfnh/view?usp=drivesdk">Resume</a>
          </p>
   <p style="padding-bottom: 4%;  color:firebrick; font-size: 20px;"></p>
+ 
   
   
   </main>
   
-<%- include partials/bottom_nav.ejs %>  
+<%- include partials/bottom_nav.ejs %> 
 
 <%- include partials/footer.ejs %>
