--- a/server/views/partials/main_nav.ejs
+++ b/server/views/partials/main_nav.ejs
@@ -42,6 +42,14 @@
         <% } %>
           <a class="nav-link" href="/services"><i class="fas fa-cogs"></i> Services </a>
         </li>
+        
+        <% if (title == "Books") { %>
+          <li class="nav-item active">
+          <% } else  { %>
+          <li class="nav-item">
+          <% } %>
+            <a class="nav-link" href="/book-list"><i class="fas fa-book"></i> Contact-list </a>
+          </li>
 
         <% if (title == "Contact") { %>
         <li class="nav-item active">
@@ -50,6 +58,16 @@
         <% } %>
           <a class="nav-link" href="/contact"><i class="fas fa-mobile-alt"></i> Contact </a>
         </li>
+
+        <% if(typeof displayName == 'string' && displayName) { %>
+          <li class="navbar-text"><i class="fas fa-lg fa-user"></i> Welcome, <%= displayName %></li>
+          <li class="nav-item"><a href="/logout" class="nav-link">
+            <i class="fas fa-lg fa-sign-out-alt"></i> Logout</a></li>
+        <% } else { %>
+          <li class="nav-item"><a href="/login" class="nav-link">
+            <i class="fas fa-lg fa-sign-in-alt"></i> Login</a></li>
+        <% } %>
+
     </div>
   </nav>
 
