--- a/server/views/services.ejs
+++ b/server/views/services.ejs
@@ -2,7 +2,7 @@
 
 <%- include partials/main_nav.ejs %>
  <body>
-<img src="\Assets\images\download (1).jpg" style=" float:left; min-width: 700px; max-width: 700px; padding-left: 10%; margin-left: 2%; padding-right: 3%">
+<img src="\Assets\images\download (1).jpg" style=" float:left; min-width: 700px; max-width: 700px; padding-left: 10%; margin-left: 2%; padding-right: 3%" width="100" height="250"> 
 </body
   
 
